--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -25,7 +25,8 @@ jobs:
         with:
           registry-url: 'https://registry.npmjs.org'
           access: public
+
           ## sign the deployment
-          #provenance: true
+          provenance: false
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
