--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "eth-exporter",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/index.mjs",
+  "bin": "dist/index.mjs",
+  "type": "module",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "postbuild": "chmod +x dist/index.js"
+    "postbuild": "chmod +x dist/index.mjs"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +15,10 @@
   "dependencies": {
     "arg": "^5.0.2",
     "eth-connect": "^6.2.1",
-    "isomorphic-fetch": "^3.0.0"
+    "fp-future": "^1.0.1",
+    "isomorphic-fetch": "^3.0.0",
+    "sql-template-tag": "^5.2.0",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
