new format for csv: double entry

--- a/poap.cfg
+++ b/poap.cfg
@@ -1,10 +1,12 @@
 # this is an example configuration file named "input.cfg"
 
-blockNumber 17773460
+blockNumber 18894571
 # etherscanApiKey <YOUR ETHERSCAN API KEY>, can also be set as an ENV VAR
 
 # we "add" the accounts we want to track.
 add 0xf6B6F07862A02C85628B3A9688beae07fEA9C863 poap.xyz
+add 0xeb3b9f824c8551a58a427aeaaa1044866bb5e28e
+add 0x57757e3d981446d585af0d9ae4d7df6d64647806
 
 # and "label" some nodes to make it easier to interpret
 label 0x57757E3D981446D585Af0D9Ae4d7DF6D64647806 patricioworthalter.eth
