user defined selectors

--- a/poap.cfg
+++ b/poap.cfg
@@ -31,3 +31,7 @@ cluster Exchanges ^DEX.*
 cluster Nouns Nouns
 cluster NFT NFT
 cluster ENS .eth$
+
+selector 0x74bd0ace Swap
+selector 0x659dd2b4 createBid
+selector 0xbf8ebca7 test
