--- a/package.json
+++ b/package.json
@@ -25,5 +25,12 @@
   "devDependencies": {
     "@types/node": "^14.14.37",
     "typescript": "^5.1.6"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "tabWidth": 2
   }
 }
