add hledger support

--- a/poap.cfg
+++ b/poap.cfg
@@ -1,20 +1,20 @@
 # this is an example configuration file named "input.cfg"
 
-blockNumber 19249473
+blockNumber 20801835
 # etherscanApiKey <YOUR ETHERSCAN API KEY>, can also be set as an ENV VAR
 
 # we "add" the accounts we want to track.
-add 0xf6B6F07862A02C85628B3A9688beae07fEA9C863 poap.xyz
+add 0xf6B6F07862A02C85628B3A9688beae07fEA9C863 assets:poap.xyz
 add 0xeb3b9f824c8551a58a427aeaaa1044866bb5e28e
 add 0x57757e3d981446d585af0d9ae4d7df6d64647806
 
 # and "label" some nodes to make it easier to interpret
-label 0x57757E3D981446D585Af0D9Ae4d7DF6D64647806 patricioworthalter.eth
-label 0xEB3B9F824c8551A58a427aeaAa1044866bB5e28e worthalter.eth
+label 0x57757E3D981446D585Af0D9Ae4d7DF6D64647806 assets:patricioworthalter.eth
+label 0xEB3B9F824c8551A58a427aeaAa1044866bB5e28e assets:worthalter.eth
 
 label 0x9008D19f58AAbD9eD0D60971565AA8510560ab41 CoWProtocol
 label 0x4F30E682D0541eAC91748bd38A648d759261b8f3 old TUSD token
-label 0x0000000000000000000000000000000000000000 zero
+label 0x0000000000000000000000000000000000000000 expense:fees
 
 label 0xe069CB01D06bA617bCDf789bf2ff0D5E5ca20C71 DEX-1inch
 label 0xe5bfab544eca83849c53464f85b7164375bdaac1 Zora
